--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,16 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>in.libin</groupId>
-	<artifactId>hello</artifactId>
+	<artifactId>myweb</artifactId>
 	<packaging>war</packaging>
 	<version>0.0.1</version>
 	<name>my-app</name>
 	<url>http://maven.apache.org</url>
+	<properties>
+     <maven.compiler.source>1.8</maven.compiler.source>
+     <maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>javax.servlet</groupId>
