--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,19 +1,30 @@
 version: 0.2
 
+
 phases:
+  pre_build:
+    commands:
+      - echo Logging in to Amazon ECR...
+      - aws --version
+      - $(aws ecr get-login --region $AWS_DEFAULT_REGION --no-include-email)
+      - REPOSITORY_URI=public.ecr.aws/w1i3w8x3/hello-world-java
+      - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
+      - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
+      - mvn clean package -DskipTests=true
   build:
     commands:
-      - echo Entered the build phase...
       - echo Build started on `date`
-      - mvn clean package -DskipTests=true
+      - echo Building the Docker image...
+      - docker build -t $REPOSITORY_URI:latest .
+      - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
   post_build:
     commands:
-      - echo Build completed successfully
       - mv target/myweb*.war target/myweb.war
-artifacts:
-  files:
-    - target/myweb*/*
-  discard-paths: yes
+      - echo Build completed on `date`
+      - echo Pushing the Docker images...
+      - docker push $REPOSITORY_URI:latest
+      - docker push $REPOSITORY_URI:$IMAGE_TAG
+      - echo Writing image definitions file...
 
 cache:
   paths:
