--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,8 @@ phases:
     commands:
       - echo Logging in to Amazon ECR...
       - aws --version
-      - aws ecr get-login-password --region $AWS_DEFAULT_REGION --no-include-email
+      - set -x
+      - aws ecr get-login-password --region ap-northeast-1 --no-include-email
       - REPOSITORY_URI=918252278260.dkr.ecr.ap-northeast-1.amazonaws.com/hello-java-private
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
