--- a/deploy-docker-file.yml
+++ b/deploy-docker-file.yml
@@ -23,7 +23,7 @@
     - name: Start the container
       docker_container:
         name: hellojavas
-        image: "harbor.intrastream.cyou/hello-world-java/hello-java:{{ DOCKER_TAG }}"
+        image: "harbor.intrastream.cyou/hello-world-java/hello-java:{{ DOCKER_TAGS }}"
         state: started
         published_ports:
           - 0.0.0.0:8081:8080
