--- a/pom.xml
+++ b/pom.xml
@@ -2,15 +2,20 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>in.libin</groupId>
-	<artifactId>mywebjabaapp</artifactId>
+	<artifactId>mywebjavaapp</artifactId>
 	<packaging>war</packaging>
-	<version>0.0.2</version>
+	<version>1.0.0</version>
 	<name>my-app</name>
 	<url>http://maven.apache.org</url>
 	<properties>
      <maven.compiler.source>1.8</maven.compiler.source>
      <maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
+	<plugin>
+	    <groupId>org.apache.maven.plugins</groupId>
+	    <artifactId>maven-war-plugin</artifactId>
+	    <version>3.3.1</version>
+	</plugin>
 
 	<dependencies>
 		<dependency>
