--- a/pom.xml
+++ b/pom.xml
@@ -11,12 +11,6 @@
      <maven.compiler.source>1.8</maven.compiler.source>
      <maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
-	<plugin>
-	    <groupId>org.apache.maven.plugins</groupId>
-	    <artifactId>maven-war-plugin</artifactId>
-	    <version>3.3.1</version>
-	</plugin>
-
 	<dependencies>
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -36,5 +30,13 @@
 		    <version>2.1.7</version>
 		</dependency>
 	</dependencies>
-	
+	<build>
+        	<plugins>
+			<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-war-plugin</artifactId>
+			    <version>3.3.1</version>
+			</plugin>
+  		</plugins>
+    	</build>
 </project>
